# AR-Research-Class

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/glasspro/: ExampleInstrumentedTest.java  ImageProcessorTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  dehaze.cpp  dehaze.h  enhance.cpp  enhance.h  glasspro.cpp  motion.cpp  motion.h  native-lib.cpp  threshold.cpp  threshold.h  videoStab.cpp  videoStab.h  vision_processor.cpp  vision_processor.h
app/src/main/java/com/example/glasspro/: MainActivity.java  NativeProcessor.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/glasspro/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
